fhir-toolkit/config/hapiFhirService.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: hapi-fhir
  namespace: #@ data.values.namespace
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hapi-fhir
