fhir-toolkit/config/hapiFhirIngress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hapi-fhir
  namespace: #@ data.values.namespace
  labels:
    app: ingress
spec:
  rules:
  - host: #@ data.values.fhir_host + "." + data.values.ingress_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hapi-fhir
            port:
              number: 8080
